--- a/web/app/cenozo/add-input.tpl.html
+++ b/web/app/cenozo/add-input.tpl.html
@@ -11,6 +11,7 @@
       <div class="input-group"
            ng-switch="input.type|cnAddType"
            ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
+        <div ng-switch-when="div" ng-bind-html="input.getContent( state, model )" />
         <input ng-switch-when="string"
           ng-attr-id="{{ input.key }}"
           name="name"
