--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -13,6 +13,12 @@
        style="cursor:pointer;">
     <h4>
       <div class="pull-right">
+        <i class="glyphicon glyphicon-question-sign glyph-hover btn-primary btn-header"
+           ng-class="{'glyph-disabled':!model.module.hasNotation(notationType)}"
+           ng-if="model.isRole('administrator') || model.module.hasNotation(notationType)"
+           uib-tooltip="Click to view documentation"
+           tooltip-placement="left"
+           ng-click="model.showNotation(notationType); $event.stopPropagation()"></i>
         <i class="glyphicon glyphicon-refresh glyph-hover btn-primary btn-header"
            ng-if="!noRefresh && isComplete"
            ng-click="refresh(); $event.stopPropagation()"
