--- a/web/app/overview/view.tpl.html
+++ b/web/app/overview/view.tpl.html
@@ -2,8 +2,14 @@
 <div ng-if="!model.viewModel.isLoading" class="container-fluid vertical-spacer allow-select">
   <h4>
     <div class="horizontal-spacer pull-right">
-      <span class="dropdown report-dropdown" style="margin-right: 4px;">
-        <i class="glyphicon glyphicon-file glyph-hover btn-header"
+      <i class="glyphicon glyphicon-question-sign glyph-hover btn-primary btn-header"
+         ng-class="{'glyph-disabled':!model.module.hasNotation(model.viewModel.record.name)}"
+         ng-if="model.isRole('administrator') || model.module.hasNotation(model.viewModel.record.name)"
+         uib-tooltip="Click to view documentation"
+         tooltip-placement="left"
+         ng-click="model.showNotation(model.viewModel.record.name); $event.stopPropagation()"></i>
+      <span class="dropdown report-dropdown" style="margin-right: 4px; margin-left: 4px;">
+        <i class="glyphicon glyphicon-file glyph-hover btn-primary btn-header"
            ng-class="!model.viewModel.isReportLoading ? 'btn-primary' : 'glyph-disabled'"
            id="reportTypeList"
            ng-click="toggleReportTypeDropdown(); $event.stopPropagation()"
