--- a/web/app/cenozo/add-input.tpl.html
+++ b/web/app/cenozo/add-input.tpl.html
@@ -114,12 +114,26 @@
           ng-required="model.metadata.columnList[input.key].required"
           onkeydown="return false"></input>
         <select ng-switch-when="select"
+          ng-if="!input.multi"
           ng-attr-id="{{ input.key }}"
           name="name"
           ng-options="item.value as item.name disable when item.disabled for item in input.enumList"
           ng-model="record[input.key]"
           ng-change="check()"
           class="form-control"
+          ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ||
+                       !input.enumList || 1 >= input.enumList.length"
+          ng-required="model.metadata.columnList[input.key].required"></select>
+        <select ng-switch-when="select"
+          ng-if="input.multi"
+          multiple
+          ng-attr-id="{{ input.key }}"
+          name="name"
+          ng-options="item.value as item.name disable when item.disabled for item in input.enumList"
+          ng-model="record[input.key]"
+          ng-change="check()"
+          class="form-control"
+          style="height:17em;"
           ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ||
                        !input.enumList || 1 >= input.enumList.length"
           ng-required="model.metadata.columnList[input.key].required"></select>
