--- a/web/app/cenozo/view-input.tpl.html
+++ b/web/app/cenozo/view-input.tpl.html
@@ -199,11 +199,13 @@
                    style="height: 40px;",
                    class="full-width" />
           </div>
-          <div ng-switch-when="base64_image"
+          <div ng-switch-when="base64"
                ng-attr-id="{{ input.key }}"
                name="name"
                class="vertical-spacer">
-            <img ng-src="data:{{ model.viewModel.record[input.key].mime_type }};base64,{{ model.viewModel.record[input.key].data }}"
+            <div ng-if="'audio/' == model.viewModel.record[input.key].mime_type.substr(0,6)">(Audio files cannot be previewed)</div>
+            <img ng-if="'image/' == model.viewModel.record[input.key].mime_type.substr(0,6)"
+                 ng-src="data:{{ model.viewModel.record[input.key].mime_type }};base64,{{ model.viewModel.record[input.key].data }}"
                  class="full-width" />
           </div>
           <div ng-switch-when="file"
@@ -534,7 +536,7 @@
         </span>
       </div>
       <div ng-if="model.getEditEnabled() &&
-                  !['file', 'base64_image'].includes( input.type ) &&
+                  !['file', 'base64'].includes( input.type ) &&
                   true !== input.isConstant( state, model ) &&
                   'view' != input.isConstant( state, model ) &&
                   !changed &&
