Adding new stripped and hover CSS classes

--- a/web/app/overview/view.tpl.html
+++ b/web/app/overview/view.tpl.html
@@ -40,7 +40,7 @@
     <!-- value is not an array -->
     <div ng-if="!(item1.value|cnIsArray)"
          class="container-fluid"
-         ng-class="{'striped':$odd,'hover':hover}"
+         ng-class="{'striped-bg':$odd,'hover-bg':hover}"
          ng-mouseenter="hover = true"
          ng-mouseleave="hover = false">
       <label class="col-sm-6">{{ item1.label }}</label>
@@ -56,7 +56,7 @@
           <!-- value is not an array -->
           <div ng-if="!(item2.value|cnIsArray)"
                class="container-fluid"
-               ng-class="{'striped':$odd,'hover':hover}"
+               ng-class="{'striped-bg':$odd,'hover-bg':hover}"
                ng-mouseenter="hover = true"
                ng-mouseleave="hover = false">
             <label class="col-sm-6">{{ item2.label }}</label>
@@ -72,7 +72,7 @@
                 <!-- value is not an array -->
                 <div ng-if="!(item3.value|cnIsArray)"
                      class="container-fluid"
-                     ng-class="{'striped':$odd,'hover':hover}"
+                     ng-class="{'striped-bg':$odd,'hover-bg':hover}"
                      ng-mouseenter="hover = true"
                      ng-mouseleave="hover = false">
                   <label class="col-sm-6">{{ item3.label }}</label>
@@ -88,7 +88,7 @@
                       <!-- value is not an array -->
                       <div ng-if="!(item4.value|cnIsArray)"
                            class="container-fluid"
-                           ng-class="{'striped':$odd,'hover':hover}"
+                           ng-class="{'striped-bg':$odd,'hover-bg':hover}"
                            ng-mouseenter="hover = true"
                            ng-mouseleave="hover = false">
                         <label class="col-sm-6">{{ item4.label }}</label>
@@ -104,7 +104,7 @@
                             <!-- value is not an array -->
                             <div ng-if="!(item5.value|cnIsArray)"
                                  class="container-fluid"
-                                 ng-class="{'striped':$odd,'hover':hover}"
+                                 ng-class="{'striped-bg':$odd,'hover-bg':hover}"
                                  ng-mouseenter="hover = true"
                                  ng-mouseleave="hover = false">
                               <label class="col-sm-6">{{ item5.label }}</label>
