--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -139,7 +139,9 @@
             ng-click="model.listModel.chooseMode ? chooseRecord( record ) : selectRecord( record )"
             ng-class="{
               success:model.listModel.chooseMode && record.chosen,
-              highlight:record.$highlight
+              highlight:!record.caution && record.$highlight,
+              caution:record.$caution && !record.$highlight,
+              'highlight-and-caution':record.$caution && record.$highlight
             }">
             <td ng-repeat="column in dataArray"
                 ng-if="undefined === column.isIncluded || column.isIncluded( $state, model )"
