--- a/web/app/search_result/list.tpl.html
+++ b/web/app/search_result/list.tpl.html
@@ -13,6 +13,7 @@
         <input id="q"
                name="q"
                ng-model="q"
+               ng-disabled="working"
                cn-change="search()"
                class="form-control"
                type="text"
