--- a/web/app/error/306.tpl.html
+++ b/web/app/error/306.tpl.html
@@ -1,9 +1,9 @@
 <div class="inner-view-frame">
   <div class="container-fluid bg-white allow-select">
-    <h3 class="text-primary">Please Note (406)</h3>
+    <h3 class="text-primary">Please Note (306)</h3>
     <div class="container-fluid">
       <blockquote>
-        {{ model.data }}<br>
+        <div ng-bind-html="model.data | cnNewlines"></div>
         Please <a ng-click="reload()">reload</a> the page or
         <a ng-click="back()">go back</a> to the previous page.
       </blockquote>
