Bug: fixing UI bugs

--- a/web/app/equipment_type/upload.tpl.html
+++ b/web/app/equipment_type/upload.tpl.html
@@ -8,7 +8,7 @@
          tooltip-placement="left"
          ng-click="model.showNotation(); $event.stopPropagation()"></i>
     </div>
-    Upload {{ model.viewModel.parentName }} Equipment Data
+    Upload {{ model.viewModel.record.name }} Equipment Data
   </h4>
 </div>
 <form name="form" class="form-horizontal" novalidate>
