Feature: adding debug info to error messages

--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -5,7 +5,7 @@
   <div class="modal-body allow-select" ng-class="{ 'text-danger': model.error }">
     <span ng-if="!model.html" style="white-space: pre-wrap;">{{ model.message }}</span>
     <span ng-if="model.html" ng-bind-html="model.message"></span>
-    <small ng-if="small" style="white-space: pre-wrap;"><br>{{ model.small }}</small>
+    <small ng-if="model.small" ng-bind-html="model.small"></small>
   </div>
   <div class="modal-footer bg-info" ng-if="!model.block">
     <button type="button" class="btn btn-default pull-left" ng-if="model.print" ng-click="printMessage()">Print</button>
